--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "prepublishOnly": "python build/checkversion.py && python build/all.py --force"
+  },
+  "dependencies": {
+    "mux-embed": "^2.7.0"
   }
 }
